--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Training",
   "dependencies": {
-    "websocket": "^1.0.22"
+    "express": "^4.13.4",
+    "ws": "^1.1.0"
   },
   "devDependencies": {},
   "scripts": {
